Calculates probabilities of graphs

--- a/afl_test/Makefile
+++ b/afl_test/Makefile
@@ -2,8 +2,9 @@
 all:
 	~/AFLplusplus/afl-clang-fast -O2 ./foo.c
 
-fuzz: all
-	AFL_SKIP_CPUFREQ=1 ~/AFLplusplus/afl-fuzz -p fast -d -i inputs -o outputs ./a.out @@
+fuzz:
+	rm -f shared_memory.shm
+	AFL_SKIP_CPUFREQ=1 ~/AFLplusplus/afl-fuzz -d -i inputs -o outputs ./a.out 1000000000 @@
 
 internal: all
 	./a.out internal
